// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decrements the counter when clicking the - button 1`] = `
.css-0,
[data-css-0] {
  color: red;
}

<Counter>
  <div>
    <button
      data-testid="decrement"
      disabled={false}
      onClick={[Function]}
    >
      -
    </button>
    <Component
      clicks={-1}
    >
      <glamorous(div)
        clicks={-1}
        data-testid="count"
      >
        <div
          className="css-0"
          data-testid="count"
        >
          -1
        </div>
      </glamorous(div)>
    </Component>
    <button
      data-testid="increment"
      disabled={false}
      onClick={[Function]}
    >
      +
    </button>
  </div>
</Counter>
`;

exports[`increments the counter when clicking the + button 1`] = `
.css-0,
[data-css-0] {
  color: green;
}

<Counter>
  <div>
    <button
      data-testid="decrement"
      disabled={false}
      onClick={[Function]}
    >
      -
    </button>
    <Component
      clicks={1}
    >
      <glamorous(div)
        clicks={1}
        data-testid="count"
      >
        <div
          className="css-0"
          data-testid="count"
        >
          1
        </div>
      </glamorous(div)>
    </Component>
    <button
      data-testid="increment"
      disabled={false}
      onClick={[Function]}
    >
      +
    </button>
  </div>
</Counter>
`;

exports[`renders disabled buttons 1`] = `
.css-0,
[data-css-0] {
  color: black;
}

<div>
  <button
    data-testid="decrement"
    disabled=""
  >
    -
  </button>
  <div
    class="css-0"
    data-testid="count"
  >
    0
  </div>
  <button
    data-testid="increment"
    disabled=""
  >
    +
  </button>
</div>
`;

exports[`renders enabled buttons by default 1`] = `
.css-0,
[data-css-0] {
  color: black;
}

<div>
  <button
    data-testid="decrement"
  >
    -
  </button>
  <div
    class="css-0"
    data-testid="count"
  >
    0
  </div>
  <button
    data-testid="increment"
  >
    +
  </button>
</div>
`;
